@@ -1,16 +1,16 @@
 package com.sssms.portal.service;
 
 import com.sssms.portal.dto.request.StudentAttendanceDTO;
+import com.sssms.portal.dto.StudentProfileResponse;
 import com.sssms.portal.entity.*;
 import com.sssms.portal.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import com.sssms.portal.repository.ExamResultRepository;
-import com.sssms.portal.entity.ExamResult;
-import com.sssms.portal.dto.StudentProfileResponse;
 
-import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,100 +18,108 @@ public class StudentService {
 
     private final StudentRepository studentRepository;
     private final SubjectAllocationRepository allocationRepository;
+    private final SubjectRepository subjectRepository; // Make sure this is final
     private final AttendanceSessionRepository sessionRepository;
     private final AttendanceRecordRepository recordRepository;
     private final ExamResultRepository examResultRepository;
 
     public StudentProfileResponse getProfile(Long userId) {
-            Student student = studentRepository.findById(userId)
-                    .orElseThrow(() -> new RuntimeException("Student not found"));
+        Student student = studentRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Student not found"));
 
-            // 1. Calculate Overall Attendance
-            List<StudentAttendanceDTO> attendanceList = getMyAttendance(userId);
-            double avgAttendance = attendanceList.isEmpty() ? 0.0 :
-                attendanceList.stream().mapToDouble(StudentAttendanceDTO::getPercentage).average().orElse(0.0);
+        // 1. Calculate Overall Attendance
+        List<StudentAttendanceDTO> attendanceList = getMyAttendance(userId);
+        double avgAttendance = attendanceList.isEmpty() ? 0.0 :
+            attendanceList.stream().mapToDouble(StudentAttendanceDTO::getPercentage).average().orElse(0.0);
 
-            // 2. Fetch Real CGPA from Exam Results
-            List<ExamResult> results = examResultRepository.findByStudentId(userId);
-
-            double cgpa = 0.0;
-            if (!results.isEmpty()) {
-                double totalSgpa = results.stream().mapToDouble(ExamResult::getSgpa).sum();
-                cgpa = totalSgpa / results.size(); // Simple Average of all SGPA records
-            }
-
-            return StudentProfileResponse.builder()
-                    .firstName(student.getFirstName())
-                    .lastName(student.getLastName())
-                    .email(student.getUser().getEmail())
-                    .prn(student.getPrn())
-                    .department(student.getDepartment())
-                    .currentYear(student.getCurrentYear())
-                    .phoneNumber(student.getPhoneNumber())
-                    .address(student.getAddress())
-                    .dob(student.getDob())
-                    .overallAttendance(Math.round(avgAttendance * 10.0) / 10.0)
-                    .cgpa(Math.round(cgpa * 100.0) / 100.0) // Round to 2 decimals
-                    .build();
+        // 2. Fetch Real CGPA
+        List<ExamResult> results = examResultRepository.findByStudentId(userId);
+        double cgpa = 0.0;
+        if (!results.isEmpty()) {
+            double totalSgpa = results.stream().mapToDouble(ExamResult::getSgpa).sum();
+            cgpa = totalSgpa / results.size();
         }
+
+        return StudentProfileResponse.builder()
+                .firstName(student.getFirstName())
+                .lastName(student.getLastName())
+                .email(student.getUser().getEmail())
+                .prn(student.getPrn())
+                .department("Architecture")
+                .currentYear(student.getAcademicYear().toString())
+                .phoneNumber(student.getPhoneNumber())
+                .address(student.getAddress())
+                .dob(student.getDob())
+                .overallAttendance(Math.round(avgAttendance * 10.0) / 10.0)
+                .cgpa(Math.round(cgpa * 100.0) / 100.0)
+                .build();
+    }
 
     public List<StudentAttendanceDTO> getMyAttendance(Long userId) {
-            Student student = studentRepository.findById(userId)
-                    .orElseThrow(() -> new RuntimeException("Student profile not found"));
+        Student student = studentRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Student profile not found"));
 
-            // 1. Find all raw allocations for the student's year
-            List<SubjectAllocation> rawAllocations = allocationRepository.findAll().stream()
-                    .filter(a -> a.getClassBatch().getCurrentSemester() == student.getCurrentYear())
-                    .toList();
+        // 1. Get ALL Subjects for this Student's Year
+        List<Subject> subjects = subjectRepository.findAll().stream()
+                .filter(s -> s.getAcademicYear() == student.getAcademicYear())
+                .collect(Collectors.toList());
 
-            // 2. Use a Map to Group by Subject Code to prevent duplicates
-            java.util.Map<String, StudentAttendanceDTO> subjectMap = new java.util.HashMap<>();
+        Map<String, StudentAttendanceDTO> subjectMap = new HashMap<>();
 
-            for (SubjectAllocation allocation : rawAllocations) {
-                String code = allocation.getSubject().getCode();
-                String name = allocation.getSubject().getName();
-
-                // Calculate stats for this specific allocation
-                List<AttendanceSession> sessions = sessionRepository.findAll().stream()
-                        .filter(s -> s.getAllocation().getId().equals(allocation.getId()))
-                        .toList();
-
-                int sessionCount = sessions.size();
-
-                long attendedCount = recordRepository.findAll().stream()
-                        .filter(r -> r.getStudent().getId().equals(student.getId())
-                                  && r.getSession().getAllocation().getId().equals(allocation.getId())
-                                  && r.getStatus() == AttendanceStatus.PRESENT)
-                        .count();
-
-                // Merge into the Map
-                if (subjectMap.containsKey(code)) {
-                    // If subject exists, add to the totals
-                    StudentAttendanceDTO existing = subjectMap.get(code);
-                    existing.setTotalSessions(existing.getTotalSessions() + sessionCount);
-                    existing.setAttendedSessions(existing.getAttendedSessions() + (int) attendedCount);
-                } else {
-                    // New subject, create entry
-                    StudentAttendanceDTO dto = StudentAttendanceDTO.builder()
-                            .subjectName(name)
-                            .subjectCode(code)
-                            .totalSessions(sessionCount)
-                            .attendedSessions((int) attendedCount)
-                            .percentage(0.0) // Will calculate at end
-                            .build();
-                    subjectMap.put(code, dto);
-                }
-            }
-
-            // 3. Finalize Percentages and convert to List
-            return subjectMap.values().stream().map(dto -> {
-                double percent = (dto.getTotalSessions() == 0) ? 0 :
-                        ((double) dto.getAttendedSessions() / dto.getTotalSessions()) * 100;
-                dto.setPercentage(Math.round(percent * 10.0) / 10.0);
-                return dto;
-            }).collect(java.util.stream.Collectors.toList());
+        // 2. Pre-fill Map with Subjects
+        for (Subject s : subjects) {
+            subjectMap.put(s.getCode(), StudentAttendanceDTO.builder()
+                    .subjectName(s.getName())
+                    .subjectCode(s.getCode())
+                    .totalSessions(0)
+                    .attendedSessions(0)
+                    .percentage(0.0)
+                    .build());
         }
 
+        // 3. Find Allocations
+        List<SubjectAllocation> allocations = allocationRepository.findAll().stream()
+                .filter(a -> a.getSubject().getAcademicYear() == student.getAcademicYear())
+                .collect(Collectors.toList());
 
+        // Add Extra Courses
+        if (student.getExtraCourses() != null) {
+             allocations.addAll(student.getExtraCourses());
+             for(SubjectAllocation sa : student.getExtraCourses()) {
+                 if(!subjectMap.containsKey(sa.getSubject().getCode())) {
+                     subjectMap.put(sa.getSubject().getCode(), StudentAttendanceDTO.builder()
+                         .subjectName(sa.getSubject().getName())
+                         .subjectCode(sa.getSubject().getCode())
+                         .totalSessions(0).attendedSessions(0).percentage(0.0).build());
+                 }
+             }
+        }
 
+        // 4. Calculate Attendance from Allocations
+        for (SubjectAllocation allocation : allocations) {
+            String code = allocation.getSubject().getCode();
+
+            long total = sessionRepository.findAll().stream()
+                    .filter(s -> s.getAllocation().getId().equals(allocation.getId())).count();
+
+            long attended = recordRepository.findAll().stream()
+                    .filter(r -> r.getStudent().getId().equals(student.getId())
+                            && r.getSession().getAllocation().getId().equals(allocation.getId())
+                            && r.getStatus() == AttendanceStatus.PRESENT)
+                    .count();
+
+            if (subjectMap.containsKey(code)) {
+                StudentAttendanceDTO dto = subjectMap.get(code);
+                dto.setTotalSessions(dto.getTotalSessions() + (int) total);
+                dto.setAttendedSessions(dto.getAttendedSessions() + (int) attended);
+            }
+        }
+
+        // 5. Calculate Percentages
+        return subjectMap.values().stream().map(dto -> {
+            double p = (dto.getTotalSessions() == 0) ? 0 : ((double) dto.getAttendedSessions() / dto.getTotalSessions()) * 100;
+            dto.setPercentage(Math.round(p * 10.0) / 10.0);
+            return dto;
+        }).collect(Collectors.toList());
     }
+}
